		ncluding drop-table on oracle) cause an implicit commit and
		the rollback needs to be run first
	replaced gettimeofday calls with calls to datetime::getSystemDateAndTime
	fixed a bug in slow query logger that caused it to display the wrong
		query time
	a few mingw32 tweaks
	fixed a few PDO driver bugs related to affected row counts and
		last insert id
	implemented PDO exceptions
	added foundrows and ignorespace options to mysql connect string
	fixed a bug where affectedRows() would return -1 for MySQL selects
		instead of the same value as rowCount()
	updated sqlr-connection code not to get db host name and ip address
		at startup unless logging is enabled to work around issues
		where people fail to put the db host name in dns
	fixed a subtle bind format translation bug that caused errors when
		translating from oracle-style binds to mysql-style if the
		varaibles were out of order with the placeholders in the query
	fixed bugs in the mysql and postgresql connection code that assumed
		that the bind variables were bound in order, independent of
		their names
	resolved a paradox involved in detecting whether the current mysql
		query needs to have its bind variables faked or not
	added support for client-side debug-to-file
	added debug-to-file support to command line clients

0.53.1 - updated the configuration and tuning docs a bit
	fixed a Makefile bug that caused "make clean" to be interrupted
	extern "C"-wrapped sys/times.h for OSR500

0.53 - added support for sqlite statement api and native binds
	fixed some leaks related to using sys::getHostName()
	added multiarch detection
	added PHP PDO driver
	fixed a bind variable translation bug where output binds followed by
		:= would not be detected
	dropped zope support (for now)
	dropped PHP Pear DB support
	refactored init script - one script should work on all platforms now
	updated init script installation - should work on virtually all unixes
	added OS X launchd configuration