@@ -14,6 +14,8 @@
 	fixed a few PDO driver bugs related to affected row counts and
 		last insert id
 	implemented PDO exceptions
+	implemented support for PDO::ATTR_EMULATE_PREPARES by using
+		substitution variables
 	added foundrows and ignorespace options to mysql connect string
 	fixed a bug where affectedRows() would return -1 for MySQL selects
 		instead of the same value as rowCount()
